<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/round_button"

    >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/title_habits_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/description_habits_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_description"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/title_habits_item"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/priority_habits_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_priority"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/description_habits_item"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/type_habits_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_typeof_habit"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/priority_habits_item"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/periodicity_habits_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_periodicity"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/type_habits_item"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        />

    <ImageButton
        android:id="@+id/check_box_completing_habit"
        android:layout_width="@dimen/button_completing_habit"
        android:layout_height="@dimen/button_completing_habit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/completed_habit"
        android:src="@drawable/ic_baseline_done_24"
        android:background="@drawable/round_button"
        android:elevation="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>