<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/habitsContainerListFragment">

    <fragment
        android:id="@+id/habitsContainerListFragment"
        android:name="com.swaptech.habitstwo.listhabits.HabitsListContainerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_habits">

        <action
            android:id="@+id/action_habitsFragment_to_addFragment2"
            app:destination="@id/addFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.swaptech.habitstwo.navigation.AboutFragment"
        android:label="@string/about_item_nav_drawer"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.swaptech.habitstwo.actionwithhabit.AddFragment"
        android:label="@string/add_habit_title"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_habitsFragment"
            app:destination="@id/habitsContainerListFragment"
            app:exitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

</navigation>