<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_complete_creating_habit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_edit_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/period_of_exec_of_habit"
            app:layout_constraintStart_toEndOf="@+id/period_of_exec_of_habit">

            <EditText
                android:id="@+id/name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/sample_title"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/sample_description"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_entry" />
            <TextView
                android:id="@+id/select_priority_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_priority_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_entry"
                app:layout_constraintHorizontal_bias="0"
                android:layout_margin="5dp"
                android:textStyle="bold"
                />
            <Spinner
                android:id="@+id/priority_entry_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/choose_periodicity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_priority_tv" />

            <RadioGroup
                android:id="@+id/type_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priority_entry_fragment">

                <RadioButton
                    android:id="@+id/type_good_habit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_radio_button" />

                <RadioButton
                    android:id="@+id/type_bad_habit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad_radio_button" />

            </RadioGroup>

            <EditText
                android:id="@+id/num_of_execs_of_habit_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="@string/sample_description"
                android:inputType="number"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_entry"
                android:hint="@string/max_10"
                />


            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="4dp"
                android:text="@string/time_s_every"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/num_of_execs_of_habit_entry"
                app:layout_constraintStart_toEndOf="@id/num_of_execs_of_habit_entry" />


            <EditText
                android:id="@+id/period_of_exec_of_habit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="@string/sample_description"
                android:inputType="number"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@id/type_entry"
                app:layout_constraintStart_toEndOf="@id/tv1"
                android:hint="@string/max_31"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/days"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/num_of_execs_of_habit_entry"
                app:layout_constraintStart_toEndOf="@id/period_of_exec_of_habit" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="@dimen/color_picker_height"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/num_of_execs_of_habit_entry"
                android:id="@+id/scrollView">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/color_picker"
                    android:background="@drawable/hsl_gradient">

                    <Button
                        android:id="@+id/color_1_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_pink_color_picker"
                        android:tag="@color/new_pink_color_picker" />

                    <Button
                        android:id="@+id/color_2_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_dark_purple_color_picker"
                        android:tag="@color/new_dark_purple_color_picker" />


                    <Button

                        android:id="@+id/color_3_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_blue_color_picker"
                        android:tag="@color/new_blue_color_picker"
                        />
                    <Button
                        android:id="@+id/color_4_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_light_blue_color_picker"
                        android:tag="@color/new_light_blue_color_picker" />

                    <Button
                        android:id="@+id/color_5_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_cyan_color_picker"
                        android:tag="@color/new_cyan_color_picker" />

                    <Button
                        android:id="@+id/color_6_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_light_cyan_color_picker"
                        android:tag="@color/new_light_cyan_color_picker" />

                    <Button
                        android:id="@+id/color_7_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_light_salad_color_picker"
                        android:tag="@color/new_light_salad_color_picker" />

                    <Button
                        android:id="@+id/color_8_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_light_green_color_picker"
                        android:tag="@color/new_light_green_color_picker" />

                    <Button
                        android:id="@+id/color_9_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_green_color_picker"
                        android:tag="@color/new_green_color_picker" />

                    <Button
                        android:id="@+id/color_10_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_lime_color_picker"
                        android:tag="@color/new_lime_color_picker" />

                    <Button
                        android:id="@+id/color_11_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_light_yellow_color_picker"
                        android:tag="@color/new_light_yellow_color_picker" />

                    <Button
                        android:id="@+id/color_12_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_yellow_color_picker"
                        android:tag="@color/new_yellow_color_picker" />

                    <Button
                        android:id="@+id/color_13_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_orange_color_picker"
                        android:tag="@color/new_orange_color_picker" />

                    <Button
                        android:id="@+id/color_14_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_red_color_picker"
                        android:tag="@color/new_red_color_picker" />

                    <Button
                        android:id="@+id/color_15_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_light_pink_color_picker"
                        android:tag="@color/new_light_pink_color_picker" />

                    <Button
                        android:id="@+id/color_16_button"
                        android:layout_width="@dimen/colorPickerSide"
                        android:layout_height="@dimen/colorPickerSide"
                        android:layout_margin="@dimen/color_picker_item_margin"
                        android:background="@drawable/color_picker_item"
                        android:backgroundTint="@color/new_pink_color_picker"
                        android:tag="@color/new_pink_color_picker" />
                </GridLayout>

            </HorizontalScrollView>

            <View
                android:id="@+id/colorViewer"
                android:layout_width="@dimen/colorPickerSide"
                android:layout_height="@dimen/colorPickerSide"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollView"
                android:background="@color/dark_grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/colorViewer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0"
                android:layout_margin="5dp"
                android:id="@+id/textColorViewer"
                android:text="R: 0 G: 0 B: 0"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <Button
        android:id="@+id/button_complete_creating_habit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_button_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_bottom_nav_view"
        android:elevation="20dp"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
